lesson 6, подключили шрифты

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import "utils/mixins";
 @import "utils/fonts";
 @import "utils/reset";
+//@import "modules/wrapper.scss";- в конце файла
 
 html {
   line-height: $mainLineHeight;
