--- a/src/scss/utils/vars.scss
+++ b/src/scss/utils/vars.scss
@@ -1,5 +1,7 @@
 // Font
-$mainFont                : 'Montserrat', Helvetica, Arial, sans-serif;
+//$mainFont                : 'Montserrat', Helvetica, Arial, sans-serif;
+$mainFont                : 'HelveticaNeue-CondensedBlack', Helvetica, Arial, sans-serif;
+$secondFont              : 'HelveticaNeue-CondensedBlack', 'Montserrat', Helvetica, Arial, sans-serif;
 
 // Size
 $mainFontColor           : #101010;
